--- a/branding/css/rhn-header.css
+++ b/branding/css/rhn-header.css
@@ -35,23 +35,26 @@ IMG#rhnLogo
 #utilityLinks
 {
 	float: left;
-	width: 43%;
+	/*[disabled]width:44%;*/
 	padding: 0 0 0 10px;
 	/*[disabled]border-bottom:1px solid #CCC;*/
 }
 #utilityLinks P#geo
 {
 	margin: 0;
-	float: left;
-	width: 34%;
+	/*[disabled]float:left;*/
+	/*[disabled]width:34%;*/
+	padding: 0px;
+	display: inline;
 }
 #utilityLinks P#linx
 {
 	margin: 0;
-	float: right;
-	/*[disabled]width:57%;*/
+	/*[disabled]float:right;*/
+	/*[disabled]width:75%;*/
 	text-align: right;
 	/*[disabled]padding-right:3%;*/
+	display: inline;
 }
 #utilityAccount
 {
